--- a/invincible/index.html
+++ b/invincible/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <title>tvx3</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Invincible - tvx3</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -17,18 +17,29 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="../">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./watchlist">Watchlist</a>
+                        <a class="nav-link" href="../watchlist">Watchlist</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container-fluid mt-3">
-        <a href="./invincible/"><img src="https://artworks.thetvdb.com/banners/v4/series/368207/posters/652a5ef981eab.jpg" class="img-thumbnail" id="poster"></a>
-        <a href="./pixels/"><img src="https://artworks.thetvdb.com/banners/movies/274/posters/25870159.jpg" class="img-thumbnail" id="poster"></a>
+    <div class="container-fluid my-3">
+        <h1>Invincible (2021)</h1>
+        <p id="desc">Seventeen-year-old Mark Grayson is just like every guy his age, except that his father is Omni-Man, the most powerful superhero on the planet. As Mark develops powers of his own, he discovers his father's legacy may not be as heroic as it seems.</p>
+        <h2>Season 1</h2>
+        <p><a href="./s1e1">E1: It's About Time</a></p>
+        <p><a href="./s1e2">E2: Here Goes Nothing</a></p>
+        <p><a href="./s1e3">E3: Who You Calling Ugly?</a></p>
+        <p><a href="./s1e4">E4: Neil Armstrong, Eat Your Heart Out</a></p>
+        <p><a href="./s1e5">E5: That Actually Hurt</a></p>
+        <p><a href="./s1e6">E6: You Look Kinda Dead</a></p>
+        <p><a href="./s1e7">E7: We Need to Talk</a></p>
+        <p><a href="./s1e8">E8: Where I Really Come From</a></p>
+        <button type="button" class="btn btn-primary" id="addToWatchlist">Add to Watchlist</button>
+        <img src="https://artworks.thetvdb.com/banners/v4/series/368207/posters/652a5ef981eab.jpg" id="poster" hidden>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="../index.js"></script>
