--- a/invincible/s1e1/index.html
+++ b/invincible/s1e1/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <title>tvx3</title>
+    <link rel="stylesheet" href="../../style.css">
+    <title>It's About Time - tvx3</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -17,20 +17,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="../">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./watchlist">Watchlist</a>
+                        <a class="nav-link" href="../watchlist">Watchlist</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container-fluid mt-3">
-        <a href="./invincible/"><img src="https://artworks.thetvdb.com/banners/v4/series/368207/posters/652a5ef981eab.jpg" class="img-thumbnail" id="poster"></a>
-        <a href="./pixels/"><img src="https://artworks.thetvdb.com/banners/movies/274/posters/25870159.jpg" class="img-thumbnail" id="poster"></a>
+    <div class="container-fluid my-3">
+        <h1>It's About Time</h1>
+        <p id="desc">Season 1, Episode 1 - Invincible (2021)</p>
+        <button type="button" class="btn btn-primary" onclick="window.open('https://vidsrc.to/embed/tv/tt6741278/1/1')">Watch Now</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <script src="../index.js"></script>
+    <script src="../../index.js"></script>
 </body>
 </html>
